Fix Google Search Console canonical URL issues
- Replace all internal links from 'index.html' to '/' for clean URLs
- Add redirect logic for /index.html to / in canonical script
- Add redirect for homepage query parameters to prevent duplicate indexing
- Update robots.txt to disallow /index.html
- Fixes 'Alternate page with proper canonical tag' errors in GSC

--- a/about.html
+++ b/about.html
@@ -95,17 +95,17 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html" class="nav-link" style="display:flex;align-items:center;gap:0.5rem;">
+                    <a href="/" class="nav-link" style="display:flex;align-items:center;gap:0.5rem;">
                         <i class="fas fa-leaf"></i>
                         <span style="font-family: 'Playfair Display', serif; font-weight:600;">Austin Gluten Free</span>
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html#restaurants" class="nav-link">Restaurants</a></li>
+                    <li><a href="/#restaurants" class="nav-link">Restaurants</a></li>
                     <li><a href="guides/gluten-free-austin-guide.html" class="nav-link">Guides</a></li>
-                    <li><a href="index.html#about" class="nav-link">Overview</a></li>
+                    <li><a href="/#about" class="nav-link">Overview</a></li>
                     <li><a href="#team" class="nav-link">Team</a></li>
-                    <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                    <li><a href="/#contact" class="nav-link">Contact</a></li>
                 </ul>
                 <div class="hamburger">
                     <span class="bar"></span>
@@ -118,7 +118,7 @@
 
     <main class="container about-detail" style="padding-top:120px;">
         <div class="breadcrumbs">
-            <a href="index.html">Home</a> &raquo; <strong>About</strong>
+            <a href="/">Home</a> &raquo; <strong>About</strong>
         </div>
 
         <section class="seo-content" style="margin-top:2rem;">
@@ -179,9 +179,9 @@
             </div>
 
             <h2>What’s Next</h2>
-            <p>We’re expanding coverage to include gluten-free travel itineraries for San Antonio, Hill Country wine tours, and Lake Travis resorts. Want to collaborate or suggest a restaurant for review? Complete the contact form on the <a href="index.html#contact">directory page</a> or send a note—your tips keep this resource current.</p>
+            <p>We’re expanding coverage to include gluten-free travel itineraries for San Antonio, Hill Country wine tours, and Lake Travis resorts. Want to collaborate or suggest a restaurant for review? Complete the contact form on the <a href="/#contact">directory page</a> or send a note—your tips keep this resource current.</p>
 
-            <p style="margin-top:2.5rem;"><a href="index.html#restaurants" class="btn btn-primary" style="display:inline-flex;align-items:center;gap:0.5rem;"><i class="fas fa-utensils"></i> Return to Restaurant Directory</a></p>
+            <p style="margin-top:2.5rem;"><a href="/#restaurants" class="btn btn-primary" style="display:inline-flex;align-items:center;gap:0.5rem;"><i class="fas fa-utensils"></i> Return to Restaurant Directory</a></p>
         </section>
     </main>
 
@@ -201,10 +201,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="index.html#restaurants">Restaurants</a></li>
+                        <li><a href="/#home">Home</a></li>
+                        <li><a href="/#restaurants">Restaurants</a></li>
                         <li><a href="guides/gluten-free-austin-guide.html">Gluten-Free Guide</a></li>
-                        <li><a href="index.html#about">About Overview</a></li>
+                        <li><a href="/#about">About Overview</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
@@ -212,9 +212,9 @@
                     <h4>Get Support</h4>
                     <ul>
                         <li><a href="mailto:info@austinglutenfree.com">Submit a Restaurant</a></li>
-                        <li><a href="index.html#contact">Contact Form</a></li>
+                        <li><a href="/#contact">Contact Form</a></li>
                         <li><a href="guides/gluten-free-austin-guide.html#resources">Local Resources</a></li>
-                        <li><a href="index.html#restaurants">Search Directory</a></li>
+                        <li><a href="/#restaurants">Search Directory</a></li>
                     </ul>
                 </div>
             </div>
