--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -90,15 +90,15 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="../index.html" class="nav-link" style="display:flex;align-items:center;gap:0.5rem;">
+                    <a href="../" class="nav-link" style="display:flex;align-items:center;gap:0.5rem;">
                         <i class="fas fa-leaf"></i>
                         <span style="font-family: 'Playfair Display', serif; font-weight:600;">Austin Gluten Free</span>
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="../index.html#restaurants" class="nav-link">Restaurants</a></li>
-                    <li><a href="../index.html#about" class="nav-link">About</a></li>
-                    <li><a href="../index.html#contact" class="nav-link">Contact</a></li>
+                    <li><a href="../#restaurants" class="nav-link">Restaurants</a></li>
+                    <li><a href="../#about" class="nav-link">About</a></li>
+                    <li><a href="../#contact" class="nav-link">Contact</a></li>
                     <li><a href="../about.html" class="nav-link">Our Story</a></li>
                 </ul>
                 <div class="hamburger">
@@ -112,7 +112,7 @@
 
     <main class="guide-content container">
         <div class="breadcrumbs" style="padding-top:120px;">
-            <a href="../index.html">Home</a> &raquo; <span>Guides</span> &raquo; <strong>Ultimate Gluten-Free Dining Guide to Austin</strong>
+            <a href="../">Home</a> &raquo; <span>Guides</span> &raquo; <strong>Ultimate Gluten-Free Dining Guide to Austin</strong>
         </div>
 
         <article class="seo-content" style="margin-top:2rem;">
@@ -222,7 +222,7 @@
             <section>
                 <h2>Ready to Explore?</h2>
                 <p>Use this guide alongside our searchable directory to map out breakfasts, lunches, dinners, and dessert runs. When you discover new gluten-free gems, share them at <a href="mailto:info@austinglutenfree.com">info@austinglutenfree.com</a> so we can verify and add them for future travelers. Together we keep Austin safe, inclusive, and delicious for the entire gluten-free community.</p>
-                <p style="margin-top:2rem;"><a href="../index.html#restaurants" class="btn btn-primary" style="display:inline-block;">Browse the Restaurant Directory</a></p>
+                <p style="margin-top:2rem;"><a href="../#restaurants" class="btn btn-primary" style="display:inline-block;">Browse the Restaurant Directory</a></p>
             </section>
         </article>
     </main>
@@ -243,10 +243,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="../index.html#home">Home</a></li>
-                        <li><a href="../index.html#restaurants">Restaurants</a></li>
-                        <li><a href="../index.html#about">About</a></li>
-                        <li><a href="../index.html#contact">Contact</a></li>
+                        <li><a href="../#home">Home</a></li>
+                        <li><a href="../#restaurants">Restaurants</a></li>
+                        <li><a href="../#about">About</a></li>
+                        <li><a href="../#contact">Contact</a></li>
                         <li><a href="../about.html">Our Story</a></li>
                         <li><a href="../privacy-policy.html">Privacy Policy</a></li>
                     </ul>
