--- a/restaurants/il-brutto.html
+++ b/restaurants/il-brutto.html
@@ -88,15 +88,15 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="../index.html">
+                    <a href="../">
                         <h1>🌾 Austin Gluten Free</h1>
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="../index.html" class="nav-link">Home</a></li>
-                    <li><a href="../index.html#restaurants" class="nav-link">Restaurants</a></li>
-                    <li><a href="../index.html#about" class="nav-link">About</a></li>
-                    <li><a href="../index.html#contact" class="nav-link">Contact</a></li>
+                    <li><a href="../" class="nav-link">Home</a></li>
+                    <li><a href="../#restaurants" class="nav-link">Restaurants</a></li>
+                    <li><a href="../#about" class="nav-link">About</a></li>
+                    <li><a href="../#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -104,8 +104,8 @@
 
     <main class="restaurant-detail-page">
         <div class="breadcrumbs container">
-            <a href="../index.html">Home</a> &gt; 
-            <a href="../index.html#restaurants">Restaurants</a> &gt; 
+            <a href="../">Home</a> &gt; 
+            <a href="../#restaurants">Restaurants</a> &gt; 
             <span>Il Brutto</span>
         </div>
 
@@ -195,7 +195,7 @@
                         </div>
 
                         <div class="back-to-directory">
-                            <a href="../index.html#restaurants" class="btn btn-primary">← Back to All Restaurants</a>
+                            <a href="../#restaurants" class="btn btn-primary">← Back to All Restaurants</a>
                         </div>
                     </aside>
                 </div>
@@ -207,7 +207,7 @@
         <div class="container">
             <div class="footer-bottom">
                 <p>&copy; 2025 Austin Gluten Free. All rights reserved.</p>
-                <p><a href="../index.html">Home</a> | <a href="../index.html#restaurants">All Restaurants</a> | <a href="../privacy-policy.html">Privacy Policy</a></p>
+                <p><a href="../">Home</a> | <a href="../#restaurants">All Restaurants</a> | <a href="../privacy-policy.html">Privacy Policy</a></p>
             </div>
         </div>
     </footer>
