--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -89,16 +89,16 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 0.5rem;">
+                    <a href="/" style="color: white; text-decoration: none; display: flex; align-items: center; gap: 0.5rem;">
                         <i class="fas fa-leaf"></i>
                         <span>Austin Gluten Free</span>
                     </a>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="index.html#home" class="nav-link">Home</a></li>
-                    <li><a href="index.html#restaurants" class="nav-link">Restaurants</a></li>
-                    <li><a href="index.html#about" class="nav-link">About</a></li>
-                    <li><a href="index.html#contact" class="nav-link">Contact</a></li>
+                    <li><a href="/#home" class="nav-link">Home</a></li>
+                    <li><a href="/#restaurants" class="nav-link">Restaurants</a></li>
+                    <li><a href="/#about" class="nav-link">About</a></li>
+                    <li><a href="/#contact" class="nav-link">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -106,7 +106,7 @@
 
     <main class="privacy-page">
         <div class="privacy-container">
-            <a href="index.html" class="back-link">
+            <a href="/" class="back-link">
                 <i class="fas fa-arrow-left"></i> Back to Home
             </a>
             
@@ -252,7 +252,7 @@
             <hr style="margin: 3rem 0; border: none; border-top: 1px solid #e9ecef;">
 
             <p style="text-align: center; margin-top: 2rem;">
-                <a href="index.html" class="back-link">
+                <a href="/" class="back-link">
                     <i class="fas fa-arrow-left"></i> Return to Austin Gluten Free
                 </a>
             </p>
@@ -269,9 +269,9 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html#home">Home</a></li>
-                        <li><a href="index.html#restaurants">Restaurants</a></li>
-                        <li><a href="index.html#about">About</a></li>
+                        <li><a href="/#home">Home</a></li>
+                        <li><a href="/#restaurants">Restaurants</a></li>
+                        <li><a href="/#about">About</a></li>
                         <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
