Update footer: 35+ verified restaurants, December date

--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Austin Gluten Free. All rights reserved.</p>
-                <p class="last-updated">Last Updated: November 9, 2025 | 30 Verified Restaurants</p>
+                <p class="last-updated">Last Updated: December 11, 2025 | 35+ Verified Restaurants</p>
             </div>
         </div>
     </footer>
